[package]
name = "bad"
version = "0.0.0"
authors = ["Nikolai Vazquez <nikvzqz@gmail.com>"]
license = "Unlicense OR MIT"
description = "Unlicensed bad ideas."
homepage = "https://github.com/nvzqz/bad-rs"
repository = "https://github.com/nvzqz/bad-rs"
documentation = "https://docs.rs/bad"
categories = ["no-std"]
keywords = ["why"]
include = ["Cargo.toml", "src", "README*", "CHANGELOG*", "*LICENSE*"]
edition = "2018"

[features]
default = ["std"]
alloc = []
std = []
