[package]
name = "bad"
readme = "README.md"
version = "0.1.0"
authors = ["Nikolai Vazquez <nikvzqz@gmail.com>"]
license = "Unlicense OR MIT"
description = "Unlicensed bad ideas."
homepage = "https://github.com/nvzqz/bad-rs"
repository = "https://github.com/nvzqz/bad-rs"
documentation = "https://docs.rs/bad"
categories = ["no-std"]
keywords = ["why"]
include = ["Cargo.toml", "src", "README*", "CHANGELOG*", "*LICENSE*", "build.rs"]
edition = "2018"
build = "build.rs"

[features]
default = ["std"]
alloc = []
std = []

[build-dependencies]
version_check = "0.1"
